--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ version = "0.1.0"
 
 [dependencies]
 once_cell = "1.16.0"
+clap = { version = "4.0.32", features = ["derive","cargo"] }
 [dependencies.windows]
 features = [
   "Win32_Foundation",
@@ -16,6 +17,8 @@ features = [
   "Win32_System_DataExchange",
   "Win32_System_SystemServices",
   "Win32_System_Memory",
-  "Win32_System_WindowsProgramming"
+  "Win32_System_WindowsProgramming",
+  "Win32_UI_Input_KeyboardAndMouse",
+  "Win32_UI_TextServices",
 ]
 version = "0.43.0"
