--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,9 @@ version = "0.1.0"
 [dependencies]
 once_cell = "1.16.0"
 clap = { version = "4.0.32", features = ["derive","cargo"] }
+[dependencies.async-std]
+features = ["attributes","std"]
+version = "1.12.0"
 [dependencies.windows]
 features = [
   "Win32_Foundation",
