--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,10 +6,11 @@ version = "1.0.0"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+clap = {version = "4.0.32", features = ["derive", "cargo"]}
 once_cell = "1.16.0"
-clap = { version = "4.0.32", features = ["derive","cargo"] }
+send_input = {path = "../windows_send_input"}
 [dependencies.async-std]
-features = ["attributes","std"]
+features = ["attributes", "std"]
 version = "1.12.0"
 [dependencies.windows]
 features = [
@@ -27,7 +28,7 @@ features = [
 version = "0.43.0"
 
 [profile.release]
-strip = true
-opt-level=3
-lto=true
 codegen-units = 1
+lto = true
+opt-level = 3
+strip = true
