--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 edition = "2021"
 name = "multiline_paster"
-version = "1.6.1"
+version = "2.0.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -13,6 +13,9 @@ serde = { version = "^1.0.101", features = ["derive"] }
 serde_derive = "1.0.152"
 toml = "0.5.10"
 dirs = "4.0.0"
+libloading = "0.7"
+toolbox={path="../libtoolbox"}
+multiline_parser_pluginlib={path="../multiline_parser_pluginlib"}
 [dependencies.async-std]
 features = ["attributes", "std"]
 version = "1.12.0"
@@ -28,6 +31,7 @@ features = [
   "Win32_System_WindowsProgramming",
   "Win32_UI_Input_KeyboardAndMouse",
   "Win32_UI_TextServices",
+  "Win32_System_Console",
 ]
 version = "0.43.0"
 
